--- a/src/styles/css/education.css
+++ b/src/styles/css/education.css
@@ -80,77 +80,8 @@
   max-width: 300px;
   width: 95%;
 }
-.section_2 .boxes.active,
-.section_2 .skillsbox.active {
+.section_2 .boxes.active {
   opacity: 1;
-}
-.section_2 .skillsbox {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  align-items: center;
-  padding-bottom: 150px;
-  opacity: 0;
-}
-.section_2 .skillsbox h1 {
-  margin: 0 auto;
-  color: #fff;
-  font-size: 4vw;
-  padding-top: 100px;
-  text-align: center;
-}
-.section_2 .skillsbox .main-skills,
-.section_2 .skillsbox .other-skills {
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 40px;
-  justify-content: center;
-  border-top: 1px solid rgba(177, 177, 177, 0.7960784314);
-  padding-top: 20px;
-  width: 100%;
-  max-width: 885px;
-}
-.section_2 .skillsbox .main-skills .skill-box,
-.section_2 .skillsbox .other-skills .skill-box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  transition: transform 0.3s ease;
-}
-.section_2 .skillsbox .main-skills .skill-box img,
-.section_2 .skillsbox .other-skills .skill-box img {
-  width: 75px;
-  height: 75px;
-  object-fit: contain;
-}
-.section_2 .skillsbox .main-skills .skill-box p,
-.section_2 .skillsbox .other-skills .skill-box p {
-  color: #fff;
-  margin-top: 10px;
-}
-.section_2 .skillsbox .main-skills .skill-box:hover,
-.section_2 .skillsbox .other-skills .skill-box:hover {
-  transform: scale(1.3);
-}
-.section_2 .bottom-section {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 40px;
-}
-.section_2 .bottom-section .bottom_text {
-  font-size: 40px;
-  color: #fff;
-  margin: 0;
-}
-.section_2 .bottom-section .bottom_buttons {
-  padding-top: 20px;
-  border-top: 1px solid rgba(177, 177, 177, 0.7960784314);
-  display: flex;
-  gap: 20px;
 }
 
 .active.fade-bottom {
@@ -192,9 +123,6 @@
     margin-left: 0;
     width: 175px;
   }
-  .section_2 .skillsbox h1 {
-    font-size: calc(25px + 6vw);
-  }
 }
 @media screen and (max-width: 952px) {
   .section_2 {
@@ -218,11 +146,6 @@
     transform: scale(1.2);
   }
 }
-@media screen and (max-width: 522px) {
-  .bottom-section .bottom_buttons {
-    flex-direction: column;
-  }
-}
 @media screen and (max-width: 330px) {
   .section_2 .boxes .left-box .img-container {
     flex-direction: column;
@@ -241,16 +164,5 @@
   .section_2 .boxes .right-box .img-container a .certificate {
     width: 80%;
     min-width: 150px;
-  }
-  .section_2 .skillsbox h1 {
-    text-align: center;
-  }
-  .section_2 .bottom-section .bottom_text {
-    font-size: 10vw;
-  }
-}
-@media screen and (max-width: 288px) {
-  .section_2 .bottom-section .bottom_buttons {
-    flex-direction: column;
   }
 }/*# sourceMappingURL=education.css.map */
