--- a/src/styles/scss/education.scss
+++ b/src/styles/scss/education.scss
@@ -80,74 +80,8 @@
       }
     }
   }
-  .boxes.active,
-  .skillsbox.active {
+  .boxes.active {
     opacity: 1;
-  }
-  .skillsbox {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    align-items: center;
-    padding-bottom: 150px;
-    opacity: 0;
-    h1 {
-      margin: 0 auto;
-      color: #fff;
-      font-size: 4vw;
-      padding-top: 100px;
-      text-align: center;
-    }
-    .main-skills,
-    .other-skills {
-      align-items: center;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 40px;
-      justify-content: center;
-      border-top: 1px solid #b1b1b1cb;
-      padding-top: 20px;
-      width: 100%;
-      max-width: 885px;
-
-      .skill-box {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        cursor: pointer;
-        transition: transform 0.3s ease;
-        img {
-          width: 75px;
-          height: 75px;
-          object-fit: contain;
-        }
-        p {
-          color: #fff;
-          margin-top: 10px;
-        }
-        &:hover {
-          transform: scale(1.3);
-        }
-      }
-    }
-  }
-  .bottom-section {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    padding-bottom: 40px;
-    .bottom_text {
-      font-size: 40px;
-      color: #fff;
-      margin: 0;
-    }
-    .bottom_buttons {
-      padding-top: 20px;
-      border-top: 1px solid #b1b1b1cb;
-      display: flex;
-      gap: 20px;
-    }
   }
 }
 
@@ -191,11 +125,6 @@
         }
       }
     }
-    .skillsbox {
-      h1 {
-        font-size: calc(25px + 6vw);
-      }
-    }
   }
 }
 @media screen and (max-width: 952px) {
@@ -225,11 +154,6 @@
   }
 }
 @media screen and (max-width: 522px) {
-  .bottom-section {
-    .bottom_buttons {
-      flex-direction: column;
-    }
-  }
 }
 @media screen and (max-width: 330px) {
   .section_2 {
@@ -257,24 +181,7 @@
         }
       }
     }
-    .skillsbox {
-      h1 {
-        text-align: center;
-      }
-    }
-    .bottom-section {
-      .bottom_text {
-        font-size: 10vw;
-      }
-    }
   }
 }
 @media screen and (max-width: 288px) {
-  .section_2 {
-    .bottom-section {
-      .bottom_buttons {
-        flex-direction: column;
-      }
-    }
-  }
 }
