--- a/src/styles/css/skills.css
+++ b/src/styles/css/skills.css
@@ -1,18 +1,10 @@
 .skillsbox {
   display: flex;
   flex-direction: column;
-  padding: 20px;
   align-items: center;
-  padding-bottom: 150px;
 }
-.skillsbox h1 {
-  margin: 0 auto;
-  color: #fff;
-  font-size: 4vw;
-  padding-top: 100px;
-  text-align: center;
-  font-family: "Josefin Slab", serif;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+.skillsbox .main-skills {
+  padding-bottom: 100px;
 }
 .skillsbox .main-skills,
 .skillsbox .other-skills {
@@ -21,7 +13,6 @@
   flex-wrap: wrap;
   gap: 40px;
   justify-content: center;
-  padding-top: 20px;
   width: 100%;
   max-width: 885px;
 }
@@ -57,52 +48,11 @@
   animation: fade-bottom 600ms ease-in;
 }
 
-.bottom-section {
-  align-items: center;
-  display: flex;
-  flex-direction: column;
-  padding-bottom: 40px;
-}
-.bottom-section .bottom_text {
-  font-size: 40px;
-  color: #fff;
-  margin: 0;
-}
-.bottom-section .bottom_buttons {
-  padding-top: 20px;
-  border-top: 1px solid rgba(177, 177, 177, 0.7960784314);
-  display: flex;
-  gap: 20px;
-}
-
 @keyframes fade-bottom {
   0% {
     opacity: 0;
   }
   100% {
     opacity: 1;
-  }
-}
-@media screen and (max-width: 1299px) {
-  .skillsbox h1 {
-    font-size: calc(25px + 6vw);
-  }
-}
-@media screen and (max-width: 522px) {
-  .bottom-section .bottom_buttons {
-    flex-direction: column;
-  }
-}
-@media screen and (max-width: 330px) {
-  .skillsbox h1 {
-    text-align: center;
-  }
-  .bottom-section .bottom_text {
-    font-size: 10vw;
-  }
-}
-@media screen and (max-width: 288px) {
-  .bottom-section .bottom_buttons {
-    flex-direction: column;
   }
 }/*# sourceMappingURL=skills.css.map */
